# doc2text

./: CLAUDE.md  LICENSE  README.md  gui_runner.py  index.html  pdf_to_text_parallel.py  pyproject.toml  requirements.txt
configs/: logging.yaml  pipeline.yaml
icm/: CONTEXT.md
icm/memory/: embeddings_cache.json  session_state.json
icm/prompts/: chunking_strategy.md  pdf_extraction.md  text_cleaning.md
scripts/: batch_process.py  run_pipeline.sh  test_ocr.py
src/: CONTEXT.md  config_loader.py  main.py
src/pipeline/: CONTEXT.md  chunk_text.py  clean_text.py  export_txt.py  extract_pdf.py  orchestrator.py
src/utils/: file_io.py  logger.py  text_normalizer.py
tests/: test_chunking.py  test_cleaning.py  test_pdf_extraction.py
