[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2text"
version = "0.1.0"
description = "PDF to text extraction pipeline"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "tesseract>=5.*",
]

[project.scripts]
doc2text = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
