[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2text"
version = "0.1.0"
description = "Convert PDF documents to text files"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[project.scripts]
doc2text = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
